fix: fix check authorize